--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@angular/router": "~19.1.0",
     "@angular/ssr": "~19.1.0",
     "express": "^4.21.2",
+    "flowbite": "^3.1.2",
     "rxjs": "~7.8.0",
     "zone.js": "~0.15.0"
   },
